# agenticdoc

./: .gitignore  Procfile  README.md  app.yaml  pyproject.toml  requirements.txt  results.txt
.do/: app.yaml
src/agenticdoc/: __init__.py
src/agenticdoc/webapp/: app.py  auth.py  background.py  constant.py  documents.py  llm.py  tasks.py  upload.py
src/agenticdoc/webapp/static/: script.js
src/agenticdoc/webapp/templates/: configure.html
webapp/: __init__.py  app.py  auth.py  background.py  db.py  documents.py  landingai.py  llm.py  mistral.py  run.py  tasks.py  upload.py
webapp/static/: script.js  style.css
webapp/templates/: index.html
