[tool.poetry]
name = "agenticdoc"
version = "0.1.0"
description = "Demo project for agentic document processing"
authors = ["Ryan Morrison <ryanam26@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "webapp" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"                                             # For file uploads
uvicorn = "^0.27.1"                                                     # ASGI server
jinja2 = "^3.1.3"                                                       # For HTML templates
python-dotenv = "^1.0.0"
agentic-doc = { git = "https://github.com/landing-ai/agentic-doc.git" }
supabase = "^2.15.0"
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
requests = "^2.32.3"
openai = "^1.75.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
